z-index fix

--- a/client/src/app/components/carousel/carousel.component.scss
+++ b/client/src/app/components/carousel/carousel.component.scss
@@ -33,7 +33,7 @@
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 30;
+  z-index: 10;
   font-size: 5rem;
   line-height: normal;
   font-weight: 700;
